[gd_scene load_steps=17 format=3 uid="uid://bf3m5rai5xd5q"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_n8b00"]
[ext_resource type="Texture2D" uid="uid://bx3udjamo5hkh" path="res://assets/sprites/coin.png" id="1_ywfse"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4blwp"]
atlas = ExtResource("1_ywfse")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg11j"]
atlas = ExtResource("1_ywfse")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt6pl"]
atlas = ExtResource("1_ywfse")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp1i8"]
atlas = ExtResource("1_ywfse")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ahjh"]
atlas = ExtResource("1_ywfse")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2fdr"]
atlas = ExtResource("1_ywfse")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r1wh"]
atlas = ExtResource("1_ywfse")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ocg0"]
atlas = ExtResource("1_ywfse")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_opb3k"]
atlas = ExtResource("1_ywfse")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8otnt"]
atlas = ExtResource("1_ywfse")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36po0"]
atlas = ExtResource("1_ywfse")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgiqx"]
atlas = ExtResource("1_ywfse")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bssbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4blwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg11j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt6pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp1i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ahjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2fdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r1wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ocg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opb3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8otnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36po0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgiqx")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vpghn"]
radius = 5.0

[node name="Coin" type="Area2D"]
z_index = 2
scale = Vector2(16, 16)
script = ExtResource("1_n8b00")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bssbh")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vpghn")

[node name="ChangeScreenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ChangeScreenTimer" to="." method="_on_change_screen_timer_timeout"]
